// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Video OmniPlayer Default 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {
        "height": 200,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowsInlineMediaPlayback={true}
      cacheEnabled={true}
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://mms.myomni.live/5e6126fdbe444d66709afab1",
        }
      }
      startInLoadingState={true}
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          },
        ]
      }
      testID="video-omniplayer-webview-video"
      useSharedProcessPool={true}
      useWebKit={true}
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="video-omniplayer-webview-preview-container"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="video-omniplayer-webview-preview-video"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 36,
                "justifyContent": "center",
                "transform": Array [
                  Object {
                    "scaleX": 0.5,
                  },
                  Object {
                    "scaleY": 0.5,
                  },
                  Object {
                    "rotateZ": "0deg",
                  },
                ],
                "width": 36,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F73F52",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "45deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3EC483",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "135deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFE100",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "225deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "315deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video OmniPlayer Without Thumbnail 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {
        "height": 200,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowsInlineMediaPlayback={true}
      cacheEnabled={true}
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://mms.myomni.live/5e6126fdbe444d66709afab1",
        }
      }
      startInLoadingState={true}
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          },
        ]
      }
      testID="video-omniplayer-webview-video"
      useSharedProcessPool={true}
      useWebKit={true}
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="video-omniplayer-webview-preview-container"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="video-omniplayer-webview-preview-video"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 36,
                "justifyContent": "center",
                "transform": Array [
                  Object {
                    "scaleX": 0.5,
                  },
                  Object {
                    "scaleY": 0.5,
                  },
                  Object {
                    "rotateZ": "0deg",
                  },
                ],
                "width": 36,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F73F52",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "45deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3EC483",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "135deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFE100",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "225deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "315deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
